pkg/manager: embed BugInfo into UICrashType
This reduces the redundancy a bit.

--- a/pkg/manager/html/crash.html
+++ b/pkg/manager/html/crash.html
@@ -3,7 +3,7 @@ Copyright 2024 syzkaller project authors. All rights reserved.
 Use of this source code is governed by Apache 2 LICENSE that can be found in the LICENSE file.
 */}}
 
-<b>{{.Description}}</b>
+<b>{{.Title}}</b>
 
 {{if .Triaged}}
 Report: <a href="/report?id={{.ID}}">{{.Triaged}}</a>
