--- a/pkg/manager/html/main.html
+++ b/pkg/manager/html/main.html
@@ -27,6 +27,7 @@ Use of this source code is governed by Apache 2 LICENSE that can be found in the
 		<th><a onclick="return sortTable(this, 'First Time', textSort, true)" href="#">First Time</a></th>
 		<th><a onclick="return sortTable(this, 'Last Time', textSort, true)" href="#">Last Time</a></th>
 		<th><a onclick="return sortTable(this, 'Report', textSort)" href="#">Report</a></th>
+		<th><a onclick="return sortTable(this, 'Repro Attempt Count', numSort)" href="#">Repro Attempt Count</a></th>
 	</tr>
 	{{range $c := $.Crashes}}
 	<tr>
@@ -35,7 +36,6 @@ Use of this source code is governed by Apache 2 LICENSE that can be found in the
 		<td class="time {{if not $c.New}}inactive{{end}}">{{formatTime $c.FirstTime}}</td>
 		<td class="time {{if not $c.Active}}inactive{{end}}">{{formatTime $c.LastTime}}</td>
 		<td>
-			{{if $c.ReproAttempts}}[{{$c.ReproAttempts}} repro attempts]{{end}}
 			{{if $c.Triaged}}
 				<a href="/report?id={{$c.ID}}">{{$c.Triaged}}</a>
 			{{end}}
@@ -43,6 +43,7 @@ Use of this source code is governed by Apache 2 LICENSE that can be found in the
 				<a href="/file?name={{$c.StraceFile}}">Strace</a>
 			{{end}}
 		</td>
+		<td class="stat">{{if $c.ReproAttempts}}{{$c.ReproAttempts}}{{end}}</td>
 	</tr>
 	{{end}}
 </table>
