pkg/manager: add missing thead and tbody HTML tags

--- a/pkg/manager/html/corpus.html
+++ b/pkg/manager/html/corpus.html
@@ -5,10 +5,13 @@ Use of this source code is governed by Apache 2 LICENSE that can be found in the
 
 <table class="list_table">
 	<caption>Corpus{{if $.Call}} for {{$.Call}}{{end}}:</caption>
+	<thead>
 	<tr>
 		<th>Coverage</th>
 		<th>Program</th>
 	</tr>
+	</thead>
+	<tbody>
 	{{range $inp := $.Inputs}}
 	<tr>
 		<td>
@@ -20,4 +23,5 @@ Use of this source code is governed by Apache 2 LICENSE that can be found in the
 		<td><a href="/input?sig={{$inp.Sig}}">{{$inp.Short}}</a></td>
 	</tr>
 	{{end}}
+	</tbody>
 </table>
