--- a/pkg/manager/html/main.html
+++ b/pkg/manager/html/main.html
@@ -4,6 +4,7 @@ Use of this source code is governed by Apache 2 LICENSE that can be found in the
 */}}
 
 <table class="list_table">
+	<tbody>
 	{{range $s := $.Stats}}
 	<tr>
 		<td class="stat_name" title="{{$s.Hint}}">{{$s.Name}}</td>
@@ -16,11 +17,13 @@ Use of this source code is governed by Apache 2 LICENSE that can be found in the
 		</td>
 	</tr>
 	{{end}}
+	</tbody>
 </table>
 
 {{if .Crashes}}
 <table class="list_table">
 	<caption>Crashes:</caption>
+	<thead>
 	<tr>
 		<th><a onclick="return sortTable(this, 'Description', textSort)" href="#">Description</a></th>
 		<th><a onclick="return sortTable(this, 'Count', numSort)" href="#">Count</a></th>
@@ -29,6 +32,8 @@ Use of this source code is governed by Apache 2 LICENSE that can be found in the
 		<th><a onclick="return sortTable(this, 'Report', textSort)" href="#">Report</a></th>
 		<th><a onclick="return sortTable(this, 'Repro Attempt Count', numSort)" href="#">Repro Attempt Count</a></th>
 	</tr>
+	</thead>
+	<tbody>
 	{{range $c := $.Crashes}}
 	<tr>
 		<td class="title"><a href="/crash?id={{$c.ID}}">{{$c.Title}}</a></td>
@@ -46,17 +51,21 @@ Use of this source code is governed by Apache 2 LICENSE that can be found in the
 		<td class="stat">{{if $c.ReproAttempts}}{{$c.ReproAttempts}}{{end}}</td>
 	</tr>
 	{{end}}
+	</tbody>
 </table>
 {{end}}
 
 {{define "diff_crashes"}}
 <table class="list_table">
 	<caption>{{.Title}}:</caption>
+	<thead>
 	<tr>
 		<th>Description</th>
 		<th>Base</th>
 		<th>Patched</th>
 	</tr>
+	</thead>
+	<tbody>
 	{{range $bug := .List}}
 	<tr>
 		<td class="title">{{$bug.Title}}</td>
@@ -90,6 +99,7 @@ Use of this source code is governed by Apache 2 LICENSE that can be found in the
 		</td>
 	</tr>
 	{{end}}
+	</tbody>
 </table>
 {{end}}
 
