--- a/pkg/manager/html/prio.html
+++ b/pkg/manager/html/prio.html
@@ -5,14 +5,18 @@ Use of this source code is governed by Apache 2 LICENSE that can be found in the
 
 <table class="list_table">
 	<caption>Priorities for {{$.Call}}:</caption>
+	<thead>
 	<tr>
 		<th><a onclick="return sortTable(this, 'Prio', floatSort)" href="#">Prio</a></th>
 		<th><a onclick="return sortTable(this, 'Call', textSort)" href="#">Call</a></th>
 	</tr>
+	</thead>
+	<tbody>
 	{{range $p := $.Prios}}
 	<tr>
 		<td>{{printf "%5v" $p.Prio}}</td>
 		<td><a href='/prio?call={{$p.Call}}'>{{$p.Call}}</a></td>
 	</tr>
 	{{end}}
+	</tbody>
 </table>
